# Lesson_36_QT

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
